fix: align production redirects and allow-list vercel origin